Bug 469733 - Can no longer use the up arrow to edit the last message
Summary: Can no longer use the up arrow to edit the last message
Status: RESOLVED FIXED
Alias: None
Product: NeoChat
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Tobias Fella
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-05-14 08:41 UTC by Justin Zobel
Modified: 2023-05-27 16:36 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Justin Zobel 2023-05-14 08:41:52 UTC
Can no longer use the up arrow to edit the last message
Comment 1 Bug Janitor Service 2023-05-26 13:05:58 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/neochat/-/merge_requests/1016
Comment 2 James Graham 2023-05-27 16:36:16 UTC
Git commit ee53793a6daeb8bc2bc2f9a5918ca3604ae49c3d by James Graham.
Committed on 27/05/2023 at 16:36.
Pushed by nvrwhere into branch 'master'.

Fix replying and editing from chatbox

Restore the functionality to edit or reply to the last message in the `chatbar`.

This is achieved be moving the functions `getLastLocalUserMessageEventId` and `getLatestMessageFromRow` to `NeoChatRoom` as `editLastMessage` and `replyLastMessage` as `chatbar` no longer has access to `messageEventModel`.

The functions are also simplified as they only need to find the `eventId` and always from row 0 as this was the only use of the functions.

M  +0    -81   src/models/messageeventmodel.cpp
M  +0    -25   src/models/messageeventmodel.h
M  +67   -0    src/neochatroom.cpp
M  +15   -0    src/neochatroom.h
M  +2    -8    src/qml/Component/ChatBox/ChatBar.qml

https://invent.kde.org/network/neochat/-/commit/ee53793a6daeb8bc2bc2f9a5918ca3604ae49c3d